(fix) Caution/Warning admonition dark mode color

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -208,8 +208,8 @@
   --ifm-color-success-contrast-foreground: var(--consumer-green-light) !important;
 
   /* Warning */
-  --ifm-color-warning-contrast-background: var(--consumer-purple-dark) !important;
-  --ifm-color-warning-contrast-foreground: var(--consumer-purple-light) !important;
+  --ifm-color-warning-contrast-background: var(--consumer-orange-dark) !important;
+  --ifm-color-warning-contrast-foreground: var(--consumer-orange-light) !important;
 
   /* Danger */
   --ifm-color-danger-contrast-background: var(--consumer-orange-dark) !important;
